# Aprendizaje-Maquina

./: .env.example  .gitignore  README.md  pyproject.toml
Fase 1/: Fase1.ipynb
Fase 2/: README.md
Fase 2/backend/: app.py  chatbot.py  ollama_client.py  prompts.py
Fase 2/data/sources/playwright_snapshots/: fivb-rules-snapshot.md  ifab-law11-snapshot.md  ifab-law12-snapshot.md  ifab-law3-snapshot.md  itf-rules-snapshot.md  pmc3438148-snapshot.md  pmc6351492-periodization-deep.md  (+3 more)
Fase 2/frontend/: app.js  index.html
Fase 2/scripts/: __init__.py  chat.py  ingest.py
backend/: __init__.py  app.py  config.py  ollama_client.py  prompts.py  rag.py
data/sources/: source_registry.json
data/sources/playwright_snapshots/: nba-rule5-snapshot.md  nba-rule7-snapshot.md  nba-rulebook-snapshot.md  pmc12999919-snapshot.md  pmc3733001-snapshot.md  pmc4415826-sprint-snapshot.md  pmc5358028-snapshot.md  pmc6351492-article-deep.md  pmc6351492-periodization-snapshot.md  pubmed29848161-blocked-snapshot.md  sage-sprint-blocked-snapshot.md
data/sources/source_cards/: anaerobic_threshold_2004.json  fivb_rules_2025_2028.json  ifab_laws_2025_26.json  itf_rules_tennis_2026.json  nba_rulebook_2025_26.json  periodization_integrated_pubmed_2018.json  periodization_linear_undulating_2025.json  periodization_trustworthy_2017.json  sprint_acceleration_2015.json  sprint_training_development_2019.json  swimming_strength_review_2022.json  vo2max_measurement_2013.json
docs/: consolTest1.md
front bonito/: README.md  app.js  index.html  styles.css
frontend/: app.js  index.html  styles.css
(+3 files in other folders)
