[project]
name = "chatbot-deportes"
version = "0.1.0"
description = "Chatbot deportivo bilingue con FastAPI, Ollama y RAG local."
authors = [
  { name = "Vicente Aravena" },
  { name = "Renato Navarro" },
  { name = "Benjamin Huerta" },
  { name = "Clemente Carreño" },
  { name = "Joao Morales" }
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "chromadb>=1.0.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
